<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.ucdenver.kalthoff.checklistapp.MainActivity">
    <item
        android:id="@+id/action_add"
        android:icon="@drawable/ic_baseline_add_task_24"
        android:orderInCategory="100"
        android:title="@string/addMenuString"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/deleteCheckedString"
        app:showAsAction="ifRoom" />
    <group >
        <item
            android:id="@+id/action_default_sort"
            android:orderInCategory="100"
            android:title="@string/sortByOldestString"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_date_sort"
            android:orderInCategory="100"
            android:title="@string/sortDateString"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_urgent_sort"
            android:orderInCategory="100"
            android:title="@string/sortPriorityString"
            app:showAsAction="never" />
    </group>
</menu>