<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/verticalLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/boxImage"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:contentDescription="@string/priorityImageString"
            app:srcCompat="@android:color/holo_red_dark" />

        <LinearLayout
            android:id="@+id/horizontalLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/priorityImage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/exclamationImgString"
                app:srcCompat="@drawable/priority_high_image" />

            <CheckBox
                android:id="@+id/todoCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/todoString"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/dateTextbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/dateString"
            android:textAlignment="viewEnd"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>